Fix flex layout alignment not stretching as intended For some reason upon wrapping the bottom container  was not stretching to take up the whole space.  I need to look this up better.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
   height: 100vh;
+  background: aquamarine;
 }
 
 .banner {
@@ -24,19 +25,21 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding-top: 1rem;
-  height: 80%;
   column-gap: 1rem;
-  width: 80%;
-  margin: auto;
+  width: 90%;
+  margin: 0 auto;
+  min-height: 80vh;
+
+  align-content: stretch;
+  align-items: stretch;
 }
 .scoreboard-container {
   color: white;
-  flex-basis: 20%;
   text-align: center;
   flex-grow: 1;
-  border-right: 2px solid white;
+  flex-shrink: 1;
   padding: 0 10px;
-  height: fit-content;
+  height: 25vh;
   font-family: "Kode Mono", monospace;
   font-size: 1.1rem;
 }
@@ -54,12 +57,12 @@ body {
 }
 .game-container {
   flex-grow: 3;
-  flex-shrink: 0;
-  flex-basis: 50%;
+  flex-shrink: 1;
+  flex-basis: 60%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  margin: 0 1.5rem;
+  grid-template-columns: repeat(3, minmax(8rem, 1fr));
+  grid-template-rows: repeat(3, minmax(8rem, 1fr));
+  margin: 1.5rem 1.5rem;
 }
 
 /* .grid-container {
